updated Hungarian translation

--- a/po/wesnoth-multiplayer/hu.po
+++ b/po/wesnoth-multiplayer/hu.po
@@ -11,7 +11,7 @@ msgstr ""
 "Project-Id-Version: hu-multiplayer\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2011-12-15 10:39+0100\n"
-"PO-Revision-Date: 2011-11-27 18:10+0100\n"
+"PO-Revision-Date: 2011-12-17 14:46+0100\n"
 "Last-Translator: Kádár-Németh Krisztián <krisztian.kad@gmail.com>\n"
 "Language-Team: Hungarian <wesnoth-hungtrans@gna.org>\n"
 "Language: hu\n"
@@ -37,16 +37,18 @@ msgid ""
 "<span foreground='#%02x%02x%02x'>Side %d</span>:  Income score = %d  Unit "
 "score = %d  Gold = %d"
 msgstr ""
+"<span foreground='#%02x%02x%02x'>%d. csapat</span>:  Bevételi pontszám = %d  "
+"Egység pontszám = %d  Arany = %d"
 
 #. [lua]: id=unit.id }), speaker=narrator, speaker=narrator
 #: data/multiplayer/eras.cfg:126
 msgid "Grand total: <b>%d</b>"
-msgstr ""
+msgstr "Összesen: <b>%d</b>"
 
 #. [lua]: id=unit.id }), speaker=narrator, speaker=narrator
 #: data/multiplayer/eras.cfg:136
 msgid "<span foreground='%s'>Side %d</span> has the advantage."
-msgstr ""
+msgstr "A(z) <span foreground='%s'>%d. csapat</span> vezet."
 
 #. [era]: id=era_default
 #: data/multiplayer/eras.cfg:160
