--- a/po/wesnoth-tutorial/hu.po
+++ b/po/wesnoth-tutorial/hu.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: hu-tutorial\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2011-12-15 10:39+0100\n"
-"PO-Revision-Date: 2011-11-27 20:42+0100\n"
+"PO-Revision-Date: 2011-12-17 14:48+0100\n"
 "Last-Translator: Kádár-Németh Krisztián <krisztian.kad@gmail.com>\n"
 "Language-Team: Hungarian <wesnoth-hungtrans@gna.org>\n"
 "Language: hu\n"
@@ -308,33 +308,21 @@ msgstr "Koronák"
 
 #. [message]: speaker=narrator
 #: data/campaigns/tutorial/scenarios/1_Tutorial.cfg:458
-#, fuzzy
-#| msgid ""
-#| "Note: The tiny metal crown above Delfador means you will lose the game if "
-#| "he is killed. You will also lose the game if your leader (Konrad) is "
-#| "killed."
 msgid ""
 "The tiny metal crown above Delfador means you will lose the game if he is "
 "killed. You will also lose the game if your leader (Konrad) is killed."
 msgstr ""
-"Jó, ha tudod: az apró fém korona Delfador mellett azt jelenti, hogy ha ő "
-"elesik, a csatát is elveszted. Ugyancsak veszítesz, ha a vezéredet "
-"(Konradot) megölik."
+"Az apró fém korona Delfador mellett azt jelenti, hogy ha ő elesik, a csatát "
+"is elveszted. Ugyancsak veszítesz, ha a vezéredet (Konradot) megölik."
 
 #. [message]: speaker=narrator
 #: data/campaigns/tutorial/scenarios/1_Tutorial.cfg:462
-#, fuzzy
-#| msgid ""
-#| "Note: The tiny metal crown above Delfador means you will lose the game if "
-#| "he is killed. You will also lose the game if your leader (Li’sar) is "
-#| "killed."
 msgid ""
 "The tiny metal crown above Delfador means you will lose the game if he is "
 "killed. You will also lose the game if your leader (Li’sar) is killed."
 msgstr ""
-"Jó, ha tudod: az apró fém korona Delfador mellett azt jelenti, hogy ha ő "
-"elesik, a csatát is elveszted. Ugyancsak veszítesz, ha a vezéredet (Li’sart) "
-"megölik."
+"Az apró fém korona Delfador mellett azt jelenti, hogy ha ő elesik, a csatát "
+"is elveszted. Ugyancsak veszítesz, ha a vezéredet (Li’sart) megölik."
 
 #. [message]: id=Delfador
 #: data/campaigns/tutorial/scenarios/1_Tutorial.cfg:474
@@ -1486,13 +1474,13 @@ msgstr "<big>Hosszú távú mozgás</big>"
 
 #. [event]
 #: data/campaigns/tutorial/scenarios/2_Tutorial.cfg:1021
-#, fuzzy
 msgid ""
 "\n"
 "You can order a unit to move for multiple turns by selecting the unit and "
 "clicking on the destination. A number will indicate how many turns it will "
 "take to get there."
 msgstr ""
+"\n"
 "Egy egység képes több körön keresztül is megállás nélkül menni célja felé: "
 "válaszd ki az egységet, azután kattints a célra. A megjelenő szám azt "
 "mutatja, hogy hány körig tart oda az út."
