Updated the Latin translation.

--- a/po/wesnoth-httt/la.po
+++ b/po/wesnoth-httt/la.po
@@ -13,7 +13,7 @@ msgstr ""
 "Project-Id-Version: Battle for Wesnoth - HTTT 1.2.0\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2011-12-15 10:39+0100\n"
-"PO-Revision-Date: 2011-06-23 21:36+0100\n"
+"PO-Revision-Date: 2011-12-22 21:40+0100\n"
 "Last-Translator: Thomas Hockings <elprofesh@gmail.com>\n"
 "Language-Team: Latin <http://wiki.wesnoth.org/LatinTranslation>\n"
 "Language: la\n"
@@ -65,7 +65,7 @@ msgstr "Vindex"
 #. [campaign]: id=Heir_To_The_Throne
 #: data/campaigns/Heir_To_The_Throne/_main.cfg:21
 msgid "(Novice level, 23 scenarios.)"
-msgstr "(Ordo facilis, XXIII scaenarii.)"
+msgstr "(Ordo facilis, XXIII scaenaria.)"
 
 #. [campaign]: id=Heir_To_The_Throne
 #: data/campaigns/Heir_To_The_Throne/_main.cfg:21
@@ -335,7 +335,7 @@ msgid ""
 "Orcish mercenaries were hired and dispatched to bring about their ruin."
 msgstr ""
 "Regnata sedecim annis, Ascuera dryadales animadversit viventes a Vesnote in "
-"magna silva australi occidentalique, quos odivisset. Mercenarii orcum "
+"magna silva australi occidentalique, quos odivisset. Mercenarii orcium "
 "conducti missique sunt ad ruendum."
 
 #. [message]: speaker=Konrad
@@ -788,7 +788,7 @@ msgid ""
 "back the head of an orc!"
 msgstr ""
 "Copiae novae advenerunt! Prodite viri! Exspecto quemque vostrum mihi caput "
-"orcum referre!"
+"orcis referre!"
 
 #. [message]: speaker=Mokolo Qimur
 #: data/campaigns/Heir_To_The_Throne/scenarios/02_Blackwater_Port.cfg:340
@@ -805,7 +805,7 @@ msgid ""
 "Reinforcements have arrived, but lo! Our allies have already destroyed the "
 "orcish army menacing our fair port. In honor, I must reward your valor."
 msgstr ""
-"Copiae novae advenerunt, sed ecce! socii nostri iam exercitum orcum "
+"Copiae novae advenerunt, sed ecce! socii nostri iam exercitum orcium "
 "deleverunt, minantem portum nostrum pulchrum. Virtus ex honoris tua "
 "remuneranda est."
 
@@ -950,8 +950,8 @@ msgid ""
 "Surely no orc can stand against us with magi in our ranks! Their magical "
 "attacks almost always find their mark, even against well-defended troops."
 msgstr ""
-"Certo nullus orcs contra nos cum magis consistere potest aciebus! Tela "
-"magica quasi semper feriunt, etiam contra milites bene defensos."
+"Certo nullus orx contra nos cum magis consistere potest aciebus! Tela magica "
+"quasi semper feriunt, etiam contra milites bene defensos."
 
 #. [message]: speaker=Delfador
 #: data/campaigns/Heir_To_The_Throne/scenarios/03_The_Isle_of_Alduin.cfg:254
@@ -1488,8 +1488,8 @@ msgid ""
 "be safest. Sail along the coast, and you can land mere miles from Elensefar. "
 "Make haste!"
 msgstr ""
-"Quoniam imperium orcum maribus franxisti, navigatio tutissima sit. Lege oram "
-"et adplicare potest prope Ellensepharem. Festina!"
+"Quoniam imperium orcium maribus franxisti, navigatio tutissima sit. Lege "
+"oram et adplicare potest prope Ellensepharem. Festina!"
 
 #. [message]: speaker=Delfador
 #: data/campaigns/Heir_To_The_Throne/scenarios/04_The_Bay_of_Pearls.cfg:918
@@ -2076,7 +2076,7 @@ msgstr ""
 msgid ""
 "Do not fear, friends. There will be a slaughter here, but it will be orcish "
 "blood staining the streets."
-msgstr "Nolite timere, amici. Caede erit, sed sanguis orcum vias maculabit."
+msgstr "Nolite timere, amici. Caede erit, sed sanguis orcium vias maculabit."
 
 #. [message]: speaker=narrator
 #: data/campaigns/Heir_To_The_Throne/scenarios/06_The_Siege_of_Elensefar.cfg:344
@@ -2431,7 +2431,7 @@ msgstr "Cogere deditionem Lisaris (puncta salutis ad nihil minuere)"
 #: data/campaigns/Heir_To_The_Throne/scenarios/08_The_Princess_of_Wesnoth.cfg:47
 msgid ""
 "...but one of the orcs survived long enough to send the news to the queen..."
-msgstr "...sed unus satis longe orcum superfuit ut nuntium reginam mittat..."
+msgstr "...sed unus satis longe orcium superfuit ut nuntium reginae mittat..."
 
 #. [part]
 #: data/campaigns/Heir_To_The_Throne/scenarios/08_The_Princess_of_Wesnoth.cfg:51
@@ -2640,7 +2640,7 @@ msgstr "Duos dies superesse"
 #. [objective]: condition=win
 #: data/campaigns/Heir_To_The_Throne/scenarios/09_The_Valley_of_Death.cfg:24
 msgid "Eradicate the liches"
-msgstr "Mortis Faudatores exstirpare"
+msgstr "Mortifugas exstirpare"
 
 #. [side]: type=Lich, id=Galga
 #: data/campaigns/Heir_To_The_Throne/scenarios/09_The_Valley_of_Death.cfg:78
@@ -3334,7 +3334,7 @@ msgid ""
 "nestled in rolling foothills both breathtaking and ominous."
 msgstr ""
 "Trans flumen terrae erant quas pauci homines umquam viserunt. Fragor "
-"fortuitus distans tympanorum orcum silvas copiosas pinorum in collibus "
+"fortuitus distans tympanorum orcium silvas copiosas pinorum in collibus "
 "disparibus et mirabiles et minaces fecerunt."
 
 #. [part]
@@ -3460,8 +3460,8 @@ msgid ""
 "frolicked across the camp."
 msgstr ""
 "Castra in valle secreta posita sunt quae habitatores a tempestate pessima "
-"hiemis et excubiis orcum protexit. Muri vallis tunc cum stridoribus pullorum "
-"grypum resonabant, qui laete per castra luserunt."
+"hiemis et excubiis orcium protexit. Muri vallis tunc cum stridoribus "
+"pullorum grypum resonabant, qui laete per castra luserunt."
 
 #. [message]: speaker=narrator
 #: data/campaigns/Heir_To_The_Throne/scenarios/12_Northern_Winter.cfg:370
@@ -3493,7 +3493,7 @@ msgid ""
 "the worst of the winter weather and roving orc patrols."
 msgstr ""
 "Castra in valle secreta posita sunt quae habitatores a tempestate pessima "
-"hiemis et excubiis orcum protexit."
+"hiemis et excubiis orcium protexit."
 
 #. [message]: speaker=narrator
 #: data/campaigns/Heir_To_The_Throne/scenarios/12_Northern_Winter.cfg:387
@@ -3578,7 +3578,7 @@ msgid ""
 "of Fire. If we tarry in this place, hordes of orcs will surround us."
 msgstr ""
 "Optio sapiens non sit, quia officium nostrum Sceptrum Ignis recipere est. Si "
-"hic moremini greges orcum nos circumdent."
+"hic moremini greges orcium nos circumdent."
 
 #. [message]: speaker=Kalenz
 #: data/campaigns/Heir_To_The_Throne/scenarios/13_The_Dwarven_Doors.cfg:211
@@ -3696,7 +3696,7 @@ msgid ""
 "assault them are repulsed, but you may be able to sneak in unnoticed."
 msgstr ""
 "Nos aditos metallorum inter proelium conciderunt. Portae, etsi fortiter "
-"defensi, patentes manent. Greges orcum qui eas oppugnant repelluntur, sed "
+"defensi, patentes manent. Greges orcium qui eas oppugnant repelluntur, sed "
 "clam te insinuare possis."
 
 #. [message]: speaker=Uncle Somf
@@ -4434,7 +4434,7 @@ msgstr ""
 msgid ""
 "Argh! I am vanquished! But at least by worthy foes, instead of those "
 "disgusting orcs."
-msgstr "A! Victus sum! Sed certo a hostibus dignis, loco orcum foedorum."
+msgstr "A! Victus sum! Sed certo a hostibus dignis, loco orcium foedorum."
 
 #. [message]: speaker=Delfador
 #: data/campaigns/Heir_To_The_Throne/scenarios/15_The_Lost_General.cfg:517
@@ -5300,9 +5300,9 @@ msgid ""
 "territory ever since."
 msgstr ""
 "Manipulares... sic, dicamus lenti erant ad subsidium Ilalionis venire, cum "
-"hunc illum agrum contra incursionem orcum teneret. Superbiam ut gerulus "
+"hunc illum agrum contra incursionem orcium teneret. Superbiam ut gerulus "
 "gladii spreverunt, et interdum indignatio vis potens apud populum meum est. "
-"Adhuc gladius in terris orcum perditus est."
+"Adhuc gladius in terris orcium perditus est."
 
 #. [message]: speaker=Li'sar
 #: data/campaigns/Heir_To_The_Throne/scenarios/19a_Snow_Plains.cfg:142
@@ -5406,7 +5406,7 @@ msgstr "Palus Horroris"
 #. [objective]: condition=win
 #: data/campaigns/Heir_To_The_Throne/scenarios/19b_Swamp_Of_Dread.cfg:21
 msgid "Defeat the Lich-Lord Aimucasur"
-msgstr "Mortis Dominum Aimucasu vincere"
+msgstr "Dominum Mortis Aimucasu vincere"
 
 #. [objective]: condition=win
 #: data/campaigns/Heir_To_The_Throne/scenarios/19b_Swamp_Of_Dread.cfg:26
@@ -5444,9 +5444,8 @@ msgid ""
 "This land is cursed. Liches have existed here for ages, luring adventurers "
 "and soldiers to their deaths and amassing great armies and fortunes."
 msgstr ""
-"Haec terra exsecrata est. Mortis Fraudatores hic saeclos erant, illiciens "
-"milites virosque audaces ad mortem et accumulantes exercitus magnos et "
-"divitias."
+"Haec terra exsecrata est. Mortifugae hic saeclos erant, illiciens milites "
+"virosque audaces ad mortem et accumulantes exercitus magnos et divitias."
 
 #. [message]: speaker=Konrad
 #: data/campaigns/Heir_To_The_Throne/scenarios/19b_Swamp_Of_Dread.cfg:203
@@ -5464,7 +5463,7 @@ msgid ""
 "must be particularly powerful, since Death Knights are usually strong-willed "
 "spirits on their own."
 msgstr ""
-"Hi Duces Mortum clientes serviti a Mortis Domino esse videntur. Illud debet "
+"Hi Duces Mortum clientes serviti a Domino Mortis esse videntur. Illud debet "
 "valde potens esse, quia Duces Mortum naturaliter solum animi pertinaces sunt."
 
 #. [message]: speaker=Kalenz
@@ -5511,8 +5510,8 @@ msgid ""
 "lich. It is clear that controlling such powerful spirits has drained it "
 "significantly, and it is seething in anger towards you."
 msgstr ""
-"Ducibus Mortibus casis, clamor acer a Mortis Fraudatore solvitur. Liquet "
-"tales animos potentes regendum graviter exhausisse, et tibi fervit."
+"Ducibus Mortibus casis, clamor acer a mortifuga solvitur. Liquet tales "
+"animos potentes regendum graviter exhausisse, et tibi fervit."
 
 #. [message]: speaker=narrator
 #: data/campaigns/Heir_To_The_Throne/scenarios/19b_Swamp_Of_Dread.cfg:315
@@ -5522,10 +5521,10 @@ msgid ""
 "strings cut. A cloud of dust billows outwards as the remnants of the lich’s "
 "once-mortal body disintegrate for the last time."
 msgstr ""
-"Ictus ultimus Mortis Fraudatorem delevit et unda energiae foras solvitur. "
-"Dux ultimus Mortis in solo tacite labitur, inanimus. Ingente nube pulveris "
-"mugiente, reliquia cutis pristina mortalis Mortis Fraudatoris et saecla "
-"sordis supremum deiciuntur."
+"Ictus ultimus mortifugam delevit et unda energiae foras solvitur. Dux "
+"ultimus Mortis in solo tacite labitur, inanimus. Ingente nube pulveris "
+"mugiente, reliquia cutis pristina mortalis mortifugae et saecla sordis "
+"supremum deiciuntur."
 
 #. [message]: speaker=narrator
 #: data/campaigns/Heir_To_The_Throne/scenarios/19b_Swamp_Of_Dread.cfg:322
@@ -5535,10 +5534,10 @@ msgid ""
 "dust billows out as the remnants of the lich’s once-mortal body disintegrate "
 "for the last time."
 msgstr ""
-"Ictus ultimus Mortis Fraudatorem delevit et unda energiae foras solvitur. "
-"Duces Mortum in solum tacite labuntur, inanimi. Ingente nube pulveris "
-"mugiente, reliquia cutis pristina mortalis Mortis Fraudatoris et saecla "
-"sordis supremum deiciuntur."
+"Ictus ultimus mortifugam delevit et unda energiae foras solvitur. Duces "
+"Mortum in solum tacite labuntur, inanimi. Ingente nube pulveris mugiente, "
+"reliquia cutis pristina mortalis mortifugae et saecla sordis supremum "
+"deiciuntur."
 
 #. [message]: speaker=narrator
 #: data/campaigns/Heir_To_The_Throne/scenarios/19b_Swamp_Of_Dread.cfg:331
@@ -5547,9 +5546,9 @@ msgid ""
 "outwards. A giant cloud of dust billows out as the remnants of the lich’s "
 "once-mortal body disintegrate for the last time."
 msgstr ""
-"Ictus ultimus Mortis Fraudatorem delevit et unda energiae foras solvitur. "
-"Ingente nube pulveris mugiente, reliquia cutis pristina mortalis Mortis "
-"Fraudatoris et saecla sordis supremum deiciuntur."
+"Ictus ultimus mortifugam delevit et unda energiae foras solvitur. Ingente "
+"nube pulveris mugiente, reliquia cutis pristina mortalis mortifugae et "
+"saecla sordis supremum deiciuntur."
 
 #. [message]: speaker=Delfador
 #: data/campaigns/Heir_To_The_Throne/scenarios/19b_Swamp_Of_Dread.cfg:337
@@ -5562,7 +5561,7 @@ msgid ""
 "Aimucasur? So you know of this Lich-Lord? Did you know him? He was a "
 "powerful mage?"
 msgstr ""
-"Aimucasune? Scisne de Mortis Domino? Cognovistine? Magusne potens fuit?"
+"Aimucasune? Scisne de Domino Mortis? Cognovistine? Magusne potens fuit?"
 
 #. [message]: speaker=Delfador
 #: data/campaigns/Heir_To_The_Throne/scenarios/19b_Swamp_Of_Dread.cfg:345
@@ -5700,9 +5699,9 @@ msgid ""
 "appointed some of his most powerful minions to guard the swamps. We must not "
 "go that way!"
 msgstr ""
-"Non suadeo. Iamdudum Mortis Fraudator, qui cum populo bellum gessit, "
-"nonnulli clientium potentissimorum elegit ut paludes custodiant. Illuc ire "
-"non possumus!"
+"Non suadeo. Iamdudum mortifuga, qui cum populo bellum gessit, nonnulli "
+"clientium potentissimorum elegit ut paludes custodiant. Illuc ire non "
+"possumus!"
 
 #. [message]: speaker=Li'sar
 #: data/campaigns/Heir_To_The_Throne/scenarios/19c_Cliffs_of_Thoria.cfg:303
@@ -6430,8 +6429,8 @@ msgid ""
 msgstr ""
 "Siste parumper, filia reginae. Vide — vix eos videre potes procul, sed "
 "exploratores inter se conspexerunt. Milites Reginae quam celerrime iter ad "
-"castra orcum, et versa vice priores, faciunt. Exercitus omnes cruentare "
-"volunt."
+"castra orcium, et versa vice priores, faciunt. Exercitus omnes cruentare "
+"cupiunt."
 
 #. [message]: speaker=Li'sar
 #: data/campaigns/Heir_To_The_Throne/scenarios/20a_North_Elves.cfg:504
@@ -8059,7 +8058,7 @@ msgstr ""
 #. [unit_type]: id=Sea Orc, race=orc
 #: data/campaigns/Heir_To_The_Throne/units/Sea_Orc.cfg:4
 msgid "Sea Orc"
-msgstr "Orcs Maris"
+msgstr "Orx Maris"
 
 #. [unit_type]: id=Sea Orc, race=orc
 #: data/campaigns/Heir_To_The_Throne/units/Sea_Orc.cfg:17
@@ -8213,10 +8212,10 @@ msgid ""
 "fire:  +10%"
 msgstr ""
 "Arma Inanis immunitates secundas donat:\n"
-"lamina: L centesimi\n"
-"cuspis: XL centesimi\n"
-"impulsus: XL centisimi\n"
-"ignis: X centisimi"
+"lamina: L%\n"
+"cuspis: XL%\n"
+"impulsum: XL%\n"
+"ignis: X%"
 
 #. [object]: id=object_scepter
 #: data/campaigns/Heir_To_The_Throne/utils/httt_utils.cfg:384
