--- a/po/wesnoth-editor/la.po
+++ b/po/wesnoth-editor/la.po
@@ -14,7 +14,7 @@ msgstr ""
 "Project-Id-Version: Wesnoth-editor 1.2\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2011-10-31 21:12+0100\n"
-"PO-Revision-Date: 2011-07-16 19:25+0100\n"
+"PO-Revision-Date: 2011-12-22 21:52+0100\n"
 "Last-Translator: Thomas Hockings <elprofesh@gmail.com>\n"
 "Language-Team: Latin <http://wiki.wesnoth.org/LatinTranslation>\n"
 "Language: la\n"
@@ -234,23 +234,20 @@ msgid "Save the Map As"
 msgstr "Chartam servare ut..."
 
 #: src/editor/editor_controller.cpp:471
-#, fuzzy
 msgid "The file already exists. Do you want to overwrite it?"
-msgstr "|Charta iam adest. Visne eam superscribere?"
+msgstr "Fasciculus iam adest. Visne eum superscribere?"
 
 #: src/editor/editor_controller.cpp:488
-#, fuzzy
 msgid "No random map generators found."
-msgstr "Fabricatores tabulas geographicas fortuitas non reperti sunt."
+msgstr "Nollus generatores chartarum fortunae inventi sunt."
 
 #: src/editor/editor_controller.cpp:501 src/editor/editor_controller.cpp:505
 msgid "Map creation failed."
 msgstr "Chartam creare male evenit."
 
 #: src/editor/editor_controller.cpp:520
-#, fuzzy
 msgid "Choose a Mask to Apply"
-msgstr "|Chartam Restituendam Eligire"
+msgstr "Personam elige ad aptandum"
 
 #: src/editor/editor_controller.cpp:527
 msgid "Error loading mask"
@@ -324,7 +321,7 @@ msgstr ""
 
 #: src/editor/editor_palettes.cpp:497
 msgid "(non-core)"
-msgstr "(non-nucleus)"
+msgstr "(innucleus)"
 
 #: src/editor/editor_palettes.cpp:498
 msgid "Will not work in game without extra care."
@@ -363,18 +360,17 @@ msgid "Could not save the map: $msg"
 msgstr "Non potis est chartam servare: $msg"
 
 #: src/gui/dialogs/editor_set_starting_position.cpp:84
-#, fuzzy
 #| msgid "(Player)^None"
 msgid "player^None"
 msgstr "Nullus"
 
 #: src/gui/dialogs/editor_set_starting_position.cpp:96
 msgid "Player $player_number"
-msgstr ""
+msgstr "Lusor $player_number"
 
 #: src/gui/dialogs/editor_settings.cpp:148
 msgid "Custom setting"
-msgstr ""
+msgstr "Electio lusoris"
 
 #~ msgid "Choose player"
 #~ msgstr "Lusorem eligere"
