--- a/po/wesnoth-sotbe/la.po
+++ b/po/wesnoth-sotbe/la.po
@@ -13,7 +13,7 @@ msgstr ""
 "Project-Id-Version: Battle for Wesnoth 1.2.0\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2011-12-15 10:39+0100\n"
-"PO-Revision-Date: 2011-09-30 17:00+0100\n"
+"PO-Revision-Date: 2011-12-23 22:40+0100\n"
 "Last-Translator: Thomas Hockings <elprofesh@gmail.com>\n"
 "Language-Team: Latin <http://wiki.wesnoth.org/LatinTranslation>\n"
 "Language: la\n"
@@ -64,7 +64,7 @@ msgstr "Bellipotens"
 #. [campaign]: id=Son_of_the_Black-Eye
 #: data/campaigns/Son_Of_The_Black_Eye/_main.cfg:22
 msgid "(Expert level, 18 scenarios.)"
-msgstr "(Ordo peritus, IIX scaenarii.)"
+msgstr "(Ordo peritus, IIXX scaenaria.)"
 
 #. [campaign]: id=Son_of_the_Black-Eye
 #: data/campaigns/Son_Of_The_Black_Eye/_main.cfg:22
@@ -2250,7 +2250,7 @@ msgstr "Cleber"
 #. [event]
 #: data/campaigns/Son_Of_The_Black_Eye/scenarios/09_Shan_Taum_the_Smug.cfg:162
 msgid "Echarp"
-msgstr ""
+msgstr "Echarpus"
 
 #. [message]: speaker=Echarp
 #: data/campaigns/Son_Of_The_Black_Eye/scenarios/09_Shan_Taum_the_Smug.cfg:168
@@ -2392,7 +2392,7 @@ msgstr "Thelarion"
 #: data/campaigns/Son_Of_The_Black_Eye/scenarios/11_Clash_of_Armies.cfg:95
 #: data/campaigns/Son_Of_The_Black_Eye/scenarios/13_The_Dwarvish_Stand.cfg:81
 msgid "Darstang"
-msgstr ""
+msgstr "Darstangus"
 
 #. [event]
 #: data/campaigns/Son_Of_The_Black_Eye/scenarios/10_Saving_Inarix.cfg:146
@@ -2660,7 +2660,7 @@ msgstr "Telamirus"
 #. [event]
 #: data/campaigns/Son_Of_The_Black_Eye/scenarios/11_Clash_of_Armies.cfg:224
 msgid "Angthur"
-msgstr ""
+msgstr "Angthurus"
 
 #. [message]: role=cannonfodder
 #: data/campaigns/Son_Of_The_Black_Eye/scenarios/11_Clash_of_Armies.cfg:245
@@ -2864,7 +2864,7 @@ msgstr "Arthaenus"
 #. [side]: type=Lieutenant, id=Hanak
 #: data/campaigns/Son_Of_The_Black_Eye/scenarios/12_Giving_Some_Back.cfg:103
 msgid "Hanak"
-msgstr ""
+msgstr "Hanacus"
 
 #. [part]
 #: data/campaigns/Son_Of_The_Black_Eye/scenarios/12_Giving_Some_Back.cfg:117
@@ -2961,7 +2961,7 @@ msgstr ""
 #. [side]: type=Bandit, id=Sagmar
 #: data/campaigns/Son_Of_The_Black_Eye/scenarios/13_The_Dwarvish_Stand.cfg:94
 msgid "Sagmar"
-msgstr ""
+msgstr "Sagmarus"
 
 #. [part]
 #: data/campaigns/Son_Of_The_Black_Eye/scenarios/13_The_Dwarvish_Stand.cfg:106
@@ -3043,7 +3043,7 @@ msgstr "Pelondras"
 #. [event]
 #: data/campaigns/Son_Of_The_Black_Eye/scenarios/13_The_Dwarvish_Stand.cfg:196
 msgid "Trithalsul"
-msgstr ""
+msgstr "Trithalsulus"
 
 #. [message]: speaker=Darstang
 #: data/campaigns/Son_Of_The_Black_Eye/scenarios/13_The_Dwarvish_Stand.cfg:200
@@ -3125,7 +3125,7 @@ msgstr "Fredor"
 #. [side]: type=General, id=Georan
 #: data/campaigns/Son_Of_The_Black_Eye/scenarios/14_Back_Home.cfg:170
 msgid "Georan"
-msgstr ""
+msgstr "Georanus"
 
 #. [part]
 #: data/campaigns/Son_Of_The_Black_Eye/scenarios/14_Back_Home.cfg:186
@@ -3138,7 +3138,7 @@ msgstr ""
 #. [event]
 #: data/campaigns/Son_Of_The_Black_Eye/scenarios/14_Back_Home.cfg:199
 msgid "Valan"
-msgstr ""
+msgstr "Valanus"
 
 #. [message]: speaker=Kapou'e
 #: data/campaigns/Son_Of_The_Black_Eye/scenarios/14_Back_Home.cfg:234
@@ -3457,7 +3457,7 @@ msgstr "Ragvanius"
 #. [side]: type=Orcish Warlord, id=Kergai
 #: data/campaigns/Son_Of_The_Black_Eye/scenarios/15_Civil_War.cfg:142
 msgid "Kergai"
-msgstr ""
+msgstr "Cergae"
 
 #. [part]
 #: data/campaigns/Son_Of_The_Black_Eye/scenarios/15_Civil_War.cfg:161
@@ -3536,7 +3536,7 @@ msgstr ""
 #: data/campaigns/Son_Of_The_Black_Eye/scenarios/15_Civil_War.cfg:223
 #: data/campaigns/Son_Of_The_Black_Eye/scenarios/15_Civil_War.cfg:228
 msgid "Right!"
-msgstr "Certo!"
+msgstr "Recte!"
 
 #. [message]: speaker=Kapou'e
 #. "whupping" is not a typo for "whipping"; it ia a Southern
@@ -3618,7 +3618,7 @@ msgstr "Cnorgus"
 #. [side]: type=Orcish Grunt, id=Nofhug
 #: data/campaigns/Son_Of_The_Black_Eye/scenarios/16_The_Coward.cfg:127
 msgid "Nofhug"
-msgstr ""
+msgstr "Nofugus"
 
 #. [part]
 #: data/campaigns/Son_Of_The_Black_Eye/scenarios/16_The_Coward.cfg:140
@@ -4200,7 +4200,7 @@ msgstr ""
 #. [unit_type]: id=Novice Orcish Shaman, race=orc
 #: data/campaigns/Son_Of_The_Black_Eye/units/Novice_Orcish_Shaman.cfg:4
 msgid "Novice Orcish Shaman"
-msgstr "Incantator Orcum Initiatus"
+msgstr "Incantator Orcuim Initiatus"
 
 #. [unit_type]: id=Novice Orcish Shaman, race=orc
 #: data/campaigns/Son_Of_The_Black_Eye/units/Novice_Orcish_Shaman.cfg:21
@@ -4213,13 +4213,13 @@ msgid ""
 "draining their life. Novice Shamans are still young and vigorous, but their "
 "spell-casting ability still needs improvement."
 msgstr ""
-"Incantatores Orcum custodes sunt magicae orcorum. In tribubus orcum "
-"honorati, formant Concilium Orcum, quod decreta magni momenti communiati "
-"toto Orum facit et contentiones inter tribus generis huius litigosi "
-"arbitrant. Etsi debiles sunt corporis (inter Orces), Incantatores Orcum "
-"incantatores probi sunt et hostes execrari possunt, haurientes vitam eorum. "
-"Incantatores Initiati iuvenes sunt et vegeti, sed facultas eorum "
-"incantamenta dicendi etiamnum emendatione caret."
+"Incantatores Orcium custodes sunt magicae eorum. In tribubus orcum honorati, "
+"formant Concilium Orcium, quod decreta magni momenti communiati toto Orcium "
+"facit et contentiones inter tribus generis huius litigosi arbitrant. Etsi "
+"debiles sunt corporis (inter Orces), Incantatores Orcium incantatores probi "
+"sunt et hostes execrari possunt, haurientes vitam eius. Incantatores "
+"Initiati iuvenes sunt et vegeti, sed facultas eorum incantamenta dicendi "
+"etiamnum emendatione caret."
 
 #. [attack]: type=impact
 #: data/campaigns/Son_Of_The_Black_Eye/units/Novice_Orcish_Shaman.cfg:26
@@ -4238,7 +4238,7 @@ msgstr "detestatio"
 #. [unit_type]: id=Old Orcish Shaman, race=orc
 #: data/campaigns/Son_Of_The_Black_Eye/units/Old_Orcish_Shaman.cfg:4
 msgid "Old Orcish Shaman"
-msgstr "Incantator Orcum Senex"
+msgstr "Incantator Orcium Senex"
 
 #. [unit_type]: id=Old Orcish Shaman, race=orc
 #: data/campaigns/Son_Of_The_Black_Eye/units/Old_Orcish_Shaman.cfg:21
@@ -4251,18 +4251,17 @@ msgid ""
 "draining their life. Old Orcish Shamans are shamans that have mastered "
 "magic, although their physical strength has declined with age."
 msgstr ""
-"Incantatores Orcum custodes sunt magicae orcorum. In tribubus orcum "
-"honorati, formant Concilium Orcum, quod decreta magni momenti communiati "
-"toto Orcum facit et contentiones inter tribus generis huius litigosi "
-"arbitrant. Etsi debiles sunt corporis (inter Orces), Incantatores Orcum "
-"incantatores probi sunt et hostes execrari possunt, exhaurientes vitam "
-"eorum. Incantatores Senes in magicam dominantur, sed vis physica in aetate "
-"minuiti est."
+"Incantatores Orcium custodes sunt magicae eorum. In tribubus orcum honorati, "
+"formant Concilium Orcium, quod decreta magni momenti communiati toto Orcium "
+"facit et contentiones inter tribus generis huius litigosi arbitrant. Etsi "
+"debiles sunt corporis (inter Orces), Incantatores Orcium incantatores probi "
+"sunt et hostes execrari possunt, exhaurientes vitam eius. Incantatores Senes "
+"in magicam dominantur, sed vis physica in aetate minuiti est."
 
 #. [unit_type]: id=Orcish Shaman, race=orc
 #: data/campaigns/Son_Of_The_Black_Eye/units/Orcish_Shaman.cfg:4
 msgid "Orcish Shaman"
-msgstr "Incantator Orcum"
+msgstr "Incantator Orcium"
 
 #. [unit_type]: id=Orcish Shaman, race=orc
 #: data/campaigns/Son_Of_The_Black_Eye/units/Orcish_Shaman.cfg:21
@@ -4274,11 +4273,11 @@ msgid ""
 "Orcs), Orcish Shamans are good spell casters and can curse their enemies, "
 "draining their life."
 msgstr ""
-"Incantatores Orcum custodes sunt magicae orcorum. In tribubus orcum "
-"honorati, formant Concilium Orcum, quod decreta magni momenti communiati "
-"toto Orcum facit et contentiones inter tribus generis huius litigosi "
-"arbitrant. Etsi debiles sunt corporis (inter Orces), Incantatores Orcum "
-"incantatores probi sunt et hostes execrari possunt, exhaurientes vitam eorum."
+"Incantatores Orcium custodes sunt magicae eorum. In tribubus orcium "
+"honorati, formant Concilium Orcium, quod decreta magni momenti communiati "
+"toto Orcium facit et contentiones inter tribus generis huius litigosi "
+"arbitrant. Etsi debiles sunt corporis (inter Orces), Incantatores Orcium "
+"incantatores probi sunt et hostes execrari possunt, exhaurientes vitam eius."
 
 #. [unit_type]: id=Watch Tower, race=mechanical
 #: data/campaigns/Son_Of_The_Black_Eye/units/Watch_Tower.cfg:4
