--- a/po/wesnoth-tutorial/sr@ijekavian.po
+++ b/po/wesnoth-tutorial/sr@ijekavian.po
@@ -9,7 +9,7 @@ msgstr ""
 "Project-Id-Version: wesnoth-tutorial\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2011-12-15 10:39+0100\n"
-"PO-Revision-Date: 2011-11-30 22:39+0100\n"
+"PO-Revision-Date: 2011-12-26 13:33+0100\n"
 "Last-Translator: Chusslove Illich <caslav.ilic@gmx.net>\n"
 "Language-Team: Serbian\n"
 "Language: sr\n"
@@ -303,31 +303,21 @@ msgstr "Круне"
 
 #. [message]: speaker=narrator
 #: data/campaigns/tutorial/scenarios/1_Tutorial.cfg:458
-#, fuzzy
-#| msgid ""
-#| "Note: The tiny metal crown above Delfador means you will lose the game if "
-#| "he is killed. You will also lose the game if your leader (Konrad) is "
-#| "killed."
 msgid ""
 "The tiny metal crown above Delfador means you will lose the game if he is "
 "killed. You will also lose the game if your leader (Konrad) is killed."
 msgstr ""
-"Напомена: Малена метална круна изнад Делфадора казује да ћеш изгубити "
-"настрада ли он; једнако губиш и ако твој вођ (Конрад) настрада."
+"Малена метална круна изнад Делфадора казује да ћеш изгубити настрада ли он; "
+"једнако губиш и ако твој вођ (Конрад) настрада."
 
 #. [message]: speaker=narrator
 #: data/campaigns/tutorial/scenarios/1_Tutorial.cfg:462
-#, fuzzy
-#| msgid ""
-#| "Note: The tiny metal crown above Delfador means you will lose the game if "
-#| "he is killed. You will also lose the game if your leader (Li’sar) is "
-#| "killed."
 msgid ""
 "The tiny metal crown above Delfador means you will lose the game if he is "
 "killed. You will also lose the game if your leader (Li’sar) is killed."
 msgstr ""
-"Напомена: Малена метална круна изнад Делфадора казује да ћеш изгубити "
-"настрада ли он; једнако губиш и ако твој вођ (Лиза́ра) настрада."
+"Малена метална круна изнад Делфадора казује да ћеш изгубити настрада ли он; "
+"једнако губиш и ако твој вођ (Лиза́ра) настрада."
 
 #. [message]: id=Delfador
 #: data/campaigns/tutorial/scenarios/1_Tutorial.cfg:474
